# coinor-cmake

./: .gitignore  README.md  Todo.txt
Bonmin/: CMakeLists.txt
Bonmin/Bonmin/: CMakeLists.txt
Bonmin/Bonmin/doxygen/: doxygen.conf.in
Bonmin/Bonmin/include/: config.h.in
Bonmin/Cbc/: CMakeLists.txt
Bonmin/Cbc/include/: config.h.in
Bonmin/Cgl/: CMakeLists.txt
Bonmin/Cgl/include/: config.h.in
Bonmin/Clp/: CMakeLists.txt
Bonmin/Clp/include/: config.h.in
Bonmin/CoinUtils/: CMakeLists.txt
Bonmin/Ipopt/: CMakeLists.txt
Bonmin/Ipopt/doxygen/: doxygen.conf.in
Bonmin/Ipopt/include/: config.h.in  config_ipopt.h.in
Bonmin/Osi/Osi/: CMakeLists.txt
Bonmin/Osi/OsiCbc/: CMakeLists.txt
Bonmin/Osi/OsiClp/: CMakeLists.txt
Bonmin/Osi/OsiGrb/: CMakeLists.txt
Bonmin/Osi/OsiSpx/: CMakeLists.txt
Bonmin/Osi/OsiSym/: CMakeLists.txt
Bonmin/Osi/OsiVol/: CMakeLists.txt
Bonmin/Osi/OsiXpr/: CMakeLists.txt
Bonmin/cmake/: FindGlpk.cmake  VA_COPY.cmake  coin-macros.cmake
Cbc/: CMakeLists.txt
Cbc/Cbc/: CMakeLists.txt
Cbc/Cbc/include/: config.h.in  config_osicbc.h.in
Cbc/Cgl/: CMakeLists.txt
Cbc/Cgl/doxydoc/: doxygen.conf.in
Cbc/Cgl/include/: config.h.in
Cbc/Clp/: CMakeLists.txt
Cbc/Clp/include/: config.h.in
Cbc/CoinUtils/: CMakeLists.txt
Cbc/Osi/Osi/: CMakeLists.txt
Cbc/Osi/Osi/include/: config.h.in
Cbc/Osi/OsiCbc/: CMakeLists.txt
Cbc/Osi/OsiClp/: CMakeLists.txt
Cbc/Osi/OsiCpx/: CMakeLists.txt
Cbc/Osi/OsiGlpk/: CMakeLists.txt
Cbc/Osi/OsiGrb/: CMakeLists.txt
Cbc/Osi/OsiMsk/: CMakeLists.txt
Cbc/Osi/OsiSpx/: CMakeLists.txt
Cbc/Osi/OsiVol/: CMakeLists.txt
Cbc/Test/: CMakeLists.txt
Cbc/cmake/: FindCHOLMOD.cmake  FindGlpk.cmake~  FindParMETIS.cmake  GetAcInitVersion.cmake  coin-macros.cmake  parse_results.py
Cgl/: CMakeLists.txt
Cgl/Cgl/: CMakeLists.txt
Cgl/Cgl/doxydoc/: doxygen.conf.in
Cgl/Cgl/include/: config.h.in
Cgl/Clp/: CMakeLists.txt
Cgl/Clp/include/: config.h.in  config_osiclp.h.in
Cgl/CoinUtils/: CMakeLists.txt
Cgl/CoinUtils/doxygen/: doxygen.conf.in
Cgl/CoinUtils/include/: config.h.in
Cgl/Osi/Osi/: CMakeLists.txt
Cgl/Osi/OsiCbc/: CMakeLists.txt
Cgl/Osi/OsiGlpk/: CMakeLists.txt  lpx.h
Cgl/Osi/OsiMsk/: CMakeLists.txt
Cgl/Osi/OsiSpx/: CMakeLists.txt
Cgl/Osi/OsiSym/: CMakeLists.txt
Cgl/Osi/OsiXpr/: CMakeLists.txt
Cgl/Test/: main.cpp
Cgl/cmake/: AC_HEADER_STDC.cmake  GetAcInitVersion.cmake  coin-macros.cmake  export_git.cmake
Clp/: CMakeLists.txt
Clp/Clp/: CMakeLists.txt
Clp/CoinUtils/: CMakeLists.txt
Clp/CoinUtils/include/: config.h.in  config_coinutils.h.in
Clp/Osi/Osi/: CMakeLists.txt
Clp/cmake/: FindMKL.cmake  coin-macros.cmake  mingw-toolchain.cmake
CoinMP/: CMakeLists.txt
CoinMP/Cbc/: CMakeLists.txt
CoinMP/Cgl/: CMakeLists.txt
CoinMP/Clp/: CMakeLists.txt
CoinMP/CoinMP/: CMakeLists.txt
CoinMP/CoinMP/doxygen/: doxygen.conf.in
CoinMP/CoinMP/include/: config.h.in  config_coinmp.h.in
CoinMP/CoinUtils/: CMakeLists.txt
CoinMP/cmake/: CheckPrototypeExists.cmake  coin-macros.cmake
CoinUtils/: CMakeLists.txt
CoinUtils/CoinUtils/: CMakeLists.txt
CoinUtils/CoinUtils/include/: config.h.in
CoinUtils/cmake/: coin-macros.cmake
Couenne/: CMakeLists.txt
Couenne/Bonmin/: CMakeLists.txt
Couenne/Cbc/: CMakeLists.txt
Couenne/Cgl/: CMakeLists.txt
Couenne/Clp/: CMakeLists.txt
Couenne/CoinUtils/: CMakeLists.txt
Couenne/Couenne/: CMakeLists.txt
Couenne/Couenne/doxydoc/: doxygen.conf.in
Couenne/Couenne/include/: config.h.in  config_couenne.h.in
Couenne/Ipopt/: CMakeLists.txt
Couenne/cmake/: FindCHOLMOD.cmake  FindGlpk.cmake  VA_COPY.cmake  parse_results.py
DyLP/: CMakeLists.txt
DyLP/CoinUtils/: CMakeLists.txt
DyLP/DyLP/: CMakeLists.txt
DyLP/DyLP/doxygen/: doxygen.conf.in
DyLP/DyLP/include/: config.h.in
DyLP/Osi/Osi/: CMakeLists.txt
DyLP/Osi/OsiCbc/: CMakeLists.txt
DyLP/Osi/OsiClp/: CMakeLists.txt
DyLP/Osi/OsiCpx/: CMakeLists.txt
DyLP/Osi/OsiDyLP/: CMakeLists.txt
DyLP/Osi/OsiGlpk/: CMakeLists.txt
DyLP/Osi/OsiSym/: CMakeLists.txt
DyLP/Osi/OsiXpr/: CMakeLists.txt
DyLP/cmake/: coin-macros.cmake
Ipopt/: CMakeLists.txt
Ipopt/Ipopt/: CMakeLists.txt
Ipopt/Ipopt/include/: config.h.in  config_ipopt.h.in
Ipopt/cmake/: AC_HEADER_STDC.cmake  coin-macros.cmake
Osi/: CMakeLists.txt
Osi/CoinUtils/: CMakeLists.txt
Osi/CoinUtils/include/: config.h.in
Osi/Osi/Osi/: CMakeLists.txt
Osi/Osi/OsiCbc/: CMakeLists.txt
Osi/Osi/OsiClp/: CMakeLists.txt
Osi/Osi/OsiCpx/: CMakeLists.txt
Osi/Osi/OsiDyLP/: CMakeLists.txt
Osi/Osi/OsiGlpk/: CMakeLists.txt  lpx.c
Osi/Osi/OsiGrb/: CMakeLists.txt
Osi/Osi/OsiMsk/: CMakeLists.txt
Osi/Osi/OsiSym/: CMakeLists.txt
Osi/Osi/OsiVol/: CMakeLists.txt
Osi/Osi/OsiXpr/: CMakeLists.txt
Osi/cmake/: CheckDIRSymbolExists.cmake  FindCHOLMOD.cmake  coin-macros.cmake  compat.c  parse_results.py
SYMPHONY/: CMakeLists.txt
SYMPHONY/Cgl/: CMakeLists.txt
SYMPHONY/Clp/: CMakeLists.txt
SYMPHONY/Clp/include/: config.h.in  config_clp.h.in
SYMPHONY/CoinUtils/: CMakeLists.txt
SYMPHONY/CoinUtils/include/: config_coinutils.h.in
SYMPHONY/Osi/Osi/: CMakeLists.txt
SYMPHONY/Osi/Osi/include/: config.h.in  config_osicommontest.h.in
SYMPHONY/Osi/OsiCbc/: CMakeLists.txt
SYMPHONY/Osi/OsiClp/: CMakeLists.txt
SYMPHONY/Osi/OsiCpx/: CMakeLists.txt
SYMPHONY/Osi/OsiGlpk/: CMakeLists.txt  OsiGlpkSolverInterface.cpp
SYMPHONY/Osi/OsiGrb/: CMakeLists.txt
SYMPHONY/Osi/OsiMsk/: CMakeLists.txt
SYMPHONY/Osi/OsiSpx/: CMakeLists.txt
SYMPHONY/Osi/OsiSym/: CMakeLists.txt
SYMPHONY/Osi/OsiXpr/: CMakeLists.txt
SYMPHONY/SYMPHONY/: CMakeLists.txt
SYMPHONY/SYMPHONY/doxygen/: doxygen.conf.in
SYMPHONY/SYMPHONY/include/: config.h.in
SYMPHONY/cmake/: FindAMD.cmake  GetAcInitVersion.cmake  coin-macros.cmake  parse_results.py
Vol/: CMakeLists.txt
Vol/CoinUtils/: CMakeLists.txt
Vol/Vol/: CMakeLists.txt
Vol/Vol/doxygen/: doxygen.conf.in
Vol/Vol/include/: config_vol.h.in
Vol/cmake/: CheckDIRSymbolExists.cmake  CheckPrototypeExists.cmake  coin-macros.cmake  parse_results.py
scripts/: git.sh  recreate.sh
(+57 files in other folders)
